Rumah sampe bulan ( Done )
Menyelesaikan gambar rumah sampai bulan. Next bkin rumus bintang di Star.java